fixes in redirections and tests

--- a/conf/linked.data.gov.au/org/tern.conf
+++ b/conf/linked.data.gov.au/org/tern.conf
@@ -135,31 +135,31 @@ RewriteRule ^/def/bdbsa-cv(.*)$                          https://linkeddata.tern
 # Turtle
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/nrm(.*)$                          https://linkeddata.tern.org.au/viewer/dawe?uri=https://linked.data.gov.au/def/nrm$1?format=text/turtle [R=302,L]
-RewriteRule ^/def/nrm(.*).ttl$                      https://linkeddata.tern.org.au/viewer/dawe?uri=https://linked.data.gov.au/def/nrm$1?format=text/turtle [R=302,L]
+RewriteRule ^/def/nrm(.*)$                          https://linkeddata.tern.org.au/viewer/dawe/id/https://linked.data.gov.au/def/nrm$1?format=text/turtle [R=302,L]
+RewriteRule ^/def/nrm(.*).ttl$                      https://linkeddata.tern.org.au/viewer/dawe/id/https://linked.data.gov.au/def/nrm$1?format=text/turtle [R=302,L]
 # RDF/XML
 RewriteCond %{QUERY_STRING} ^_mediatype=application/rdf\+xml$ [OR]
 RewriteCond %{HTTP:Accept} application/rdf\+xml [NC]
-RewriteRule ^/def/nrm(.*)$                          https://linkeddata.tern.org.au/viewer/dawe?uri=https://linked.data.gov.au/def/nrm$1?format=application/rdf\+xml [R=302,L]
-RewriteRule ^/def/nrm(.*).rdf$                      https://linkeddata.tern.org.au/viewer/dawe?uri=https://linked.data.gov.au/def/nrm$1?format=application/rdf\+xml [R=302,L]
+RewriteRule ^/def/nrm(.*)$                          https://linkeddata.tern.org.au/viewer/dawe/id/https://linked.data.gov.au/def/nrm$1?format=application/rdf\+xml [R=302,L]
+RewriteRule ^/def/nrm(.*).rdf$                      https://linkeddata.tern.org.au/viewer/dawe/id/https://linked.data.gov.au/def/nrm$1?format=application/rdf\+xml [R=302,L]
 # N-Triples
 RewriteCond %{QUERY_STRING} ^_mediatype=application/n-triples$ [OR]
 RewriteCond %{HTTP:Accept} application/n-triples [NC]
-RewriteRule ^/def/nrm(.*)$                          https://linkeddata.tern.org.au/viewer/dawe?uri=https://linked.data.gov.au/def/nrm$1?format=application/n-triples [R=302,L]
-RewriteRule ^/def/nrm(.*).nt$                       https://linkeddata.tern.org.au/viewer/dawe?uri=https://linked.data.gov.au/def/nrm$1?format=application/n-triples [R=302,L]
+RewriteRule ^/def/nrm(.*)$                          https://linkeddata.tern.org.au/viewer/dawe/id/https://linked.data.gov.au/def/nrm$1?format=application/n-triples [R=302,L]
+RewriteRule ^/def/nrm(.*).nt$                       https://linkeddata.tern.org.au/viewer/dawe/id/https://linked.data.gov.au/def/nrm$1?format=application/n-triples [R=302,L]
 # JSON-LD
 RewriteCond %{QUERY_STRING} ^_mediatype=application/ld\+json$ [OR]
 RewriteCond %{HTTP:Accept} application/ld\+json [NC]
-RewriteRule ^/def/nrm(.*)$                          https://linkeddata.tern.org.au/viewer/dawe?uri=https://linked.data.gov.au/def/nrm$1?format=application/ld\+json [R=302,L]
-RewriteRule ^/def/nrm(.*).jsonld$                   https://linkeddata.tern.org.au/viewer/dawe?uri=https://linked.data.gov.au/def/nrm$1?format=application/ld\+json [R=302,L]
+RewriteRule ^/def/nrm(.*)$                          https://linkeddata.tern.org.au/viewer/dawe/id/https://linked.data.gov.au/def/nrm$1?format=application/ld\+json [R=302,L]
+RewriteRule ^/def/nrm(.*).jsonld$                   https://linkeddata.tern.org.au/viewer/dawe/id/https://linked.data.gov.au/def/nrm$1?format=application/ld\+json [R=302,L]
 # Notation3
 RewriteCond %{QUERY_STRING} ^_mediatype=text/n3$ [OR]
 RewriteCond %{HTTP:Accept} text/n3 [NC]
-RewriteRule ^/def/nrm(.*)$                          https://linkeddata.tern.org.au/viewer/dawe?uri=https://linked.data.gov.au/def/nrm$1?format=text/n3 [R=302,L]
-RewriteRule ^/def/nrm(.*).n3$                       https://linkeddata.tern.org.au/viewer/dawe?uri=https://linked.data.gov.au/def/nrm$1?format=text/n3 [R=302,L]
+RewriteRule ^/def/nrm(.*)$                          https://linkeddata.tern.org.au/viewer/dawe/id/https://linked.data.gov.au/def/nrm$1?format=text/n3 [R=302,L]
+RewriteRule ^/def/nrm(.*).n3$                       https://linkeddata.tern.org.au/viewer/dawe/id/https://linked.data.gov.au/def/nrm$1?format=text/n3 [R=302,L]
 # HTML
 RewriteRule ^/def/nrm$                              https://linkeddata.tern.org.au/prez/dawe-cv/v/ [R=302,L]
-RewriteRule ^/def/nrm(.*)$                          https://linkeddata.tern.org.au/viewer/dawe?uri=https://linked.data.gov.au/def/nrm$1 [R=302,L]
+RewriteRule ^/def/nrm(.*)$                          https://linkeddata.tern.org.au/viewer/dawe/id/https://linked.data.gov.au/def/nrm$1 [R=302,L]
 
 
 ############################################################################################
