QSI->ICSM PID updates

--- a/conf/linked.data.gov.au/org/icsm.conf
+++ b/conf/linked.data.gov.au/org/icsm.conf
@@ -322,3 +322,7 @@ RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/surface-capture-method($|/.*)$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/surface-capture-method$1&_mediatype=text/turtle" [R=302,L]
 RewriteRule ^/def/surface-capture-method(.*).ttl$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/surface-capture-method$1&_mediatype=text/turtle" [R=302,L]
 RewriteRule ^/def/surface-capture-method($|/.*)$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/surface-capture-method$1" [R=302,NE,L]
+
+
+
+# CSDM vocabs
