--- a/conf/linked.data.gov.au/org/qsi.conf
+++ b/conf/linked.data.gov.au/org/qsi.conf
@@ -1,9 +1,3 @@
-# https://linked.data.gov.au/def/addr
-RewriteCond %{QUERY_STRING} _mediatype=text/turtle
-RewriteRule ^/def/addr                  https://raw.githubusercontent.com/Spatial-Information-QLD/address-model/main/model.ttl [R=302,L]
-RewriteRule ^/def/addr.ttl              https://raw.githubusercontent.com/Spatial-Information-QLD/address-model/main/model.ttl [R=302,L]
-RewriteRule ^/def/addr                  https://spatial-information-qld.github.io/address-model/model.html [R=302,L]
-
 # https://linked.data.gov.au/def/cad
 RewriteCond %{QUERY_STRING} _mediatype=text/turtle
 RewriteRule ^/def/cad                   https://raw.githubusercontent.com/Spatial-Information-QLD/cadastre-model/main/model.ttl [R=302,L]
@@ -27,3 +21,6 @@ RewriteCond %{QUERY_STRING} _mediatype=text/turtle
 RewriteRule ^/def/gn($|/.*)             https://raw.githubusercontent.com/Spatial-Information-QLD/geographical-names-model/main/model.ttl [R=302,L]
 RewriteRule ^/def/gn.ttl                https://raw.githubusercontent.com/Spatial-Information-QLD/geographical-names-model/main/model.ttl [R=302,L]
 RewriteRule ^/def/gn($|/.*)             https://spatial-information-qld.github.io/geographical-names-model/model.html [R=302,L]
+
+# https://linked.data.gov.au/def/gn-cm
+RewriteRule ^/def/gn-cm                 https://icsm-au.github.io/gn-creation-maintenance/doc.html [R=302,L]
