--- a/conf/linked.data.gov.au/org/icsm.conf
+++ b/conf/linked.data.gov.au/org/icsm.conf
@@ -1,3 +1,12 @@
+# https://linked.data.gov.au/def/addr
+RewriteCond %{QUERY_STRING} _mediatype=text/turtle
+RewriteRule ^/def/addr          https://icsm-au.github.io/addr-model/model.ttl [R=302,L]
+RewriteRule ^/def/addr.ttl      https://icsm-au.github.io/addr-model/model.ttl [R=302,L]
+RewriteRule ^/def/addr          https://icsm-au.github.io/addr-model/model.html [R=302,L]
+
+# https://linked.data.gov.au/def/addr-creation-maintenance
+RewriteRule ^/def/addr-creation-maintenance https://icsm-au.github.io/addr-creation-maintenance/doc.html [R=302,L]
+
 # https://linked.data.gov.au/def/csdm
 RewriteRule ^/def/csdm$ "https://icsm-au.github.io/3d-csdm/docs/" [R=302,L]
 
@@ -70,6 +79,8 @@ RewriteRule ^/def/exem                https://kurrawong.github.io/exem-ont/exem.
 RewriteRule ^/def/exem.ttl$           https://kurrawong.github.io/exem-ont/exem.ttl [R=302,L]
 RewriteRule ^/def/exem$               https://kurrawong.github.io/exem-ont/exem.html [R=302,L]
 
+# https://linked.data.gov.au/def/gn-creation-maintenance
+RewriteRule ^/def/gn-creation-maintenance https://icsm-au.github.io/gn-creation-maintenance/doc.html [R=302,L]
 
 # https://linked.data.gov.au/def/address-alias-type
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
@@ -322,7 +333,3 @@ RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/surface-capture-method($|/.*)$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/surface-capture-method$1&_mediatype=text/turtle" [R=302,L]
 RewriteRule ^/def/surface-capture-method(.*).ttl$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/surface-capture-method$1&_mediatype=text/turtle" [R=302,L]
 RewriteRule ^/def/surface-capture-method($|/.*)$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/surface-capture-method$1" [R=302,NE,L]
-
-
-
-# CSDM vocabs
