--- a/conf/linked.data.gov.au/org/icsm.conf
+++ b/conf/linked.data.gov.au/org/icsm.conf
@@ -1,11 +1,12 @@
 # https://linked.data.gov.au/def/addr
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{QUERY_STRING} _mediatype=text/turtle
-RewriteRule ^/def/addr          https://icsm-au.github.io/addr-model/model.ttl [R=302,L]
-RewriteRule ^/def/addr.ttl      https://icsm-au.github.io/addr-model/model.ttl [R=302,L]
-RewriteRule ^/def/addr          https://icsm-au.github.io/addr-model/model.html [R=302,L]
+RewriteRule ^/def/addr$         https://icsm-au.github.io/addr-model/model.ttl [R=302,L]
+RewriteRule ^/def/addr.ttl$     https://icsm-au.github.io/addr-model/model.ttl [R=302,L]
+RewriteRule ^/def/addr$         https://icsm-au.github.io/addr-model/model.html [R=302,L]
 
 # https://linked.data.gov.au/def/addr-cm
-RewriteRule ^/def/addr-cm https://icsm-au.github.io/addr-creation-maintenance/doc.html [R=302,L]
+RewriteRule ^/def/addr-cm$      https://icsm-au.github.io/addr-creation-maintenance/doc.html [R=302,L]
 
 # https://linked.data.gov.au/def/csdm
 RewriteRule ^/def/csdm$ "https://icsm-au.github.io/3d-csdm/docs/" [R=302,L]
