--- a/conf/linked.data.gov.au/org/icsm.conf
+++ b/conf/linked.data.gov.au/org/icsm.conf
@@ -1,6 +1,6 @@
 # https://linked.data.gov.au/def/addr
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-RewriteCond %{QUERY_STRING} _mediatype=text/turtle
+RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/addr$         https://icsm-au.github.io/addr-model/model.ttl [R=302,L]
 RewriteRule ^/def/addr.ttl$     https://icsm-au.github.io/addr-model/model.ttl [R=302,L]
 RewriteRule ^/def/addr$         https://icsm-au.github.io/addr-model/model.html [R=302,L]
