fix addr conneg

--- a/conf/linked.data.gov.au/org/icsm.conf
+++ b/conf/linked.data.gov.au/org/icsm.conf
@@ -82,7 +82,7 @@ RewriteRule ^/def/exem.ttl$           https://kurrawong.github.io/exem-ont/exem.
 RewriteRule ^/def/exem$               https://kurrawong.github.io/exem-ont/exem.html [R=302,L]
 
 # https://linked.data.gov.au/def/gn-cm
-RewriteRule ^/def/gn-cm https://icsm-au.github.io/gn-creation-maintenance/doc.html [R=302,L]
+RewriteRule ^/def/gn-cm$ https://icsm-au.github.io/gn-creation-maintenance/doc.html [R=302,L]
 
 # https://linked.data.gov.au/def/address-alias-type
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
