--- a/conf/linked.data.gov.au/org/gswa.conf
+++ b/conf/linked.data.gov.au/org/gswa.conf
@@ -57,6 +57,14 @@ RewriteRule ^/def/CRIRSCO-mineral-resource-reporting($|/.*) "https://vocabulary.
 RewriteRule ^/def/dmirs-offices($|/.*) "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/dmirs-offices$1" [R=302,NE,L]
 
 
+# https://linked.data.gov.au/def/earthsci-for
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/earthsci-for($|/.*)$ "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/earthsci-for$1&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/earthsci-for.ttl$ "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/earthsci-for$1&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/earthsci-for($|/.*) "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/earthsci-for$1" [R=302,NE,L]
+
+
 # https://linked.data.gov.au/def/geological-feature-type
 RewriteRule ^/def/geological-feature-type($|/.*) "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/geological-feature-type$1" [R=302,NE,L]
 
