RDF tests for all GSWA voc patterns

--- a/conf/linked.data.gov.au/org/gswa.conf
+++ b/conf/linked.data.gov.au/org/gswa.conf
@@ -29,6 +29,22 @@ RewriteRule ^/def/mining-authorisation.ttl$     https://raw.githubusercontent.co
 RewriteRule ^/def/mining-authorisation$         https://kurrawong.github.io/gswa-supermodel/components/mining-authorisation/ [R=302,L]
 
 
+# https://linked.data.gov.au/def/alteration-form
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/alteration-form($|/.*)$ "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/alteration-form$1&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/alteration-form.ttl$ "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/alteration-form$1&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/alteration-form($|/.*) "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/alteration-form$1" [R=302,NE,L]
+
+
+# https://linked.data.gov.au/def/alteration-intensity
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/alteration-intensity($|/.*)$ "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/alteration-intensity$1&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/alteration-intensity.ttl$ "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/alteration-intensity$1&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/alteration-intensity($|/.*) "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/alteration-intensity$1" [R=302,NE,L]
+
+
 # https://linked.data.gov.au/def/australian-physiographic-units
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
