--- a/conf/linked.data.gov.au/org/gswa.conf
+++ b/conf/linked.data.gov.au/org/gswa.conf
@@ -45,6 +45,14 @@ RewriteRule ^/def/alteration-intensity.ttl$ "https://vocabulary.gswa.kurrawong.a
 RewriteRule ^/def/alteration-intensity($|/.*) "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/alteration-intensity$1" [R=302,NE,L]
 
 
+# https://linked.data.gov.au/def/alteration-type
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/alteration-type($|/.*)$ "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/alteration-type$1&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/alteration-type.ttl$ "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/alteration-type$1&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/alteration-type($|/.*) "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/alteration-type$1" [R=302,NE,L]
+
+
 # https://linked.data.gov.au/def/australian-physiographic-units
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
