--- a/conf/linked.data.gov.au/org/gswa.conf
+++ b/conf/linked.data.gov.au/org/gswa.conf
@@ -77,12 +77,12 @@ RewriteRule ^/def/borehole-geometry.ttl$ "https://vocabulary.gswa.kurrawong.ai/o
 RewriteRule ^/def/borehole-geometry($|/.*) "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/borehole-geometry$1" [R=302,NE,L]
 
 
-# https://linked.data.gov.au/def/borehole-drilling-method-western-australia
+# https://linked.data.gov.au/def/borehole-drilling-method-wa
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/borehole-drilling-method-western-australia($|/.*)$ "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/borehole-drilling-method-western-australia$1&_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/borehole-drilling-method-western-australia.ttl$ "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/borehole-drilling-method-western-australia$1&_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/borehole-drilling-method-western-australia($|/.*) "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/borehole-drilling-method-western-australia$1" [R=302,NE,L]
+RewriteRule ^/def/borehole-drilling-method-wa($|/.*)$ "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/borehole-drilling-method-wa$1&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/borehole-drilling-method-wa.ttl$ "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/borehole-drilling-method-wa$1&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/borehole-drilling-method-wa($|/.*) "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/borehole-drilling-method-wa$1" [R=302,NE,L]
 
 
 # https://linked.data.gov.au/def/borehole-start-point-setting
@@ -91,6 +91,22 @@ RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/borehole-start-point-setting($|/.*)$ "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/borehole-start-point-setting$1&_mediatype=text/turtle" [R=302,L]
 RewriteRule ^/def/borehole-start-point-setting.ttl$ "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/borehole-start-point-setting$1&_mediatype=text/turtle" [R=302,L]
 RewriteRule ^/def/borehole-start-point-setting($|/.*) "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/borehole-start-point-setting$1" [R=302,NE,L]
+
+
+# https://linked.data.gov.au/def/borehole-status-wa
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/borehole-status-wa($|/.*)$ "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/borehole-status-wa$1&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/borehole-status-wa.ttl$ "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/borehole-status-wa$1&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/borehole-status-wa($|/.*) "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/borehole-status-wa$1" [R=302,NE,L]
+
+
+# https://linked.data.gov.au/def/borehole-purpose-wa
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/borehole-purpose-wa($|/.*)$ "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/borehole-purpose-wa$1&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/borehole-purpose-wa.ttl$ "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/borehole-purpose-wa$1&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/borehole-purpose-wa($|/.*) "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/borehole-purpose-wa$1" [R=302,NE,L]
 
 
 # https://linked.data.gov.au/def/CRIRSCO-mineral-resource-reporting
