fix borehole-purpose pattern

--- a/conf/linked.data.gov.au/org/gsq.conf
+++ b/conf/linked.data.gov.au/org/gsq.conf
@@ -67,7 +67,7 @@ RewriteRule ^/def/borehole-drilling-method($|/.*)$ "https://vocabs.gsq.digital/o
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/borehole-purpose($|/.*)$ "https://vocabs.gsq.digital/object?vocab_id=borehole-purpose\&uri=http://linked.data.gov.au/def/borehole-purpose$1&_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/borehole-purpose(.*)$ "https://vocabs.gsq.digital/object?vocab_id=borehole-purpose\&uri=http://linked.data.gov.au/def/borehole-purpose$1" [R=302,NE,L]
+RewriteRule ^/def/borehole-purpose($|/.*)$ "https://vocabs.gsq.digital/object?vocab_id=borehole-purpose\&uri=http://linked.data.gov.au/def/borehole-purpose$1" [R=302,NE,L]
 
 
 # https://linked.data.gov.au/def/borehole-start-point
