--- a/conf/linked.data.gov.au/org/dcceew.conf
+++ b/conf/linked.data.gov.au/org/dcceew.conf
@@ -1,6 +1,18 @@
 # https://linked.data.gov.au/dataset/bdr -> https://linked.bdr.gov.au/dataset/bdr
 RewriteRule ^/dataset/bdr($|/.*?$)                      https://linked.bdr.gov.au/dataset/bdr$1?_host=linked.data.gov.au [R=307,QSA,L]
 
+#https://linked.data.gov.au/def/bdr-pr
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/bdr-pr/validator$                     https://dcceew-bdr.github.io/bdr-profile-of-abis/validator.ttl [R=302,L]
+RewriteRule ^/def/bdr-pr/validator.ttl$                 https://dcceew-bdr.github.io/bdr-profile-of-abis/validator.ttl [R=302,L]
+RewriteRule ^/def/bdr-pr/validator$                     https://dcceew-bdr.github.io/bdr-profile-of-abis/validator.ttl [R=302,L]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/bdr-pr$                               https://dcceew-bdr.github.io/bdr-profile-of-abis/profile.ttl [R=302,L]
+RewriteRule ^/def/bdr-pr.ttl$                           https://dcceew-bdr.github.io/bdr-profile-of-abis/profile.ttl [R=302,L]
+RewriteRule ^/def/bdr-pr$                               https://dcceew-bdr.github.io/bdr-profile-of-abis/specification.html [R=302,L]
+
 
 # https://linked.data.gov.au/def/nsl
 # National Species List Data Model
