--- a/conf/linked.data.gov.au/org/agldwg.conf
+++ b/conf/linked.data.gov.au/org/agldwg.conf
@@ -157,3 +157,23 @@ RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/vocdermods/(.+)$                       https://agldwg.github.io/vocdermods/$1.ttl? [R=302,L]
 RewriteRule ^/def/vocdermods/(.+).ttl$                   https://agldwg.github.io/vocdermods/$1.ttl? [R=302,L]
 RewriteRule ^/def/vocdermods/(.+)$                       https://agldwg.github.io/vocdermods/$1 [R=302,L]
+
+
+# https://linked.data.gov.au/def/vocpub
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP_ACCEPT} text/turtle [NC]
+RewriteRule ^/def/vocpub$                        https://agldwg.github.io/vocpub-profile/profile.ttl [R=302,L]
+RewriteRule ^/def/vocpub.ttl$                    https://agldwg.github.io/vocpub-profile/profile.ttl [R=302,L]
+RewriteRule ^/def/vocpub$                        https://agldwg.github.io/vocpub-profile/profile.html [R=302,L]
+RewriteRule ^/def/vocpub/spec                    https://agldwg.github.io/vocpub-profile/specification.html [R=302,L]
+RewriteRule ^/def/vocpub/validator/([0-9\.]+)    https://cdn.jsdelivr.net/gh/AGLDWG/vocpub-profile@$1/validators/validator.ttl [R=302,L]
+RewriteRule ^/def/vocpub/validator               https://agldwg.github.io/vocpub-profile/validators/validator.ttl [R=302,L]
+RewriteRule ^/def/vocpub/expander/([0-9\.]+)     https://cdn.jsdelivr.net/gh/AGLDWG/vocpub-profile@$1/validators/expander.ttl [R=302,L]
+RewriteRule ^/def/vocpub/expander                https://agldwg.github.io/vocpub-profile/validators/expander.ttl [R=302,L]
+RewriteRule ^/def/vocpub/validator-combined/([0-9\.]+)  https://cdn.jsdelivr.net/gh/AGLDWG/vocpub-profile@$1/validators/validator-combined.ttl [R=302,L]
+RewriteRule ^/def/vocpub/validator-combined      https://agldwg.github.io/vocpub-profile/validators/validator-combined.ttl [R=302,L]
+RewriteRule ^/def/vocpub/htv                     https://agldwg.github.io/vocpub-profile/HowToValidate.html [R=302,L]
+RewriteRule ^/def/vocpub/validate                https://agldwg.github.io/vocpub-profile/scripts/validate.py [R=302,L]
+RewriteRule ^/def/vocpub/examples                https://github.com/AGLDWG/vocpub-profile/tree/master/examples [R=302,L]
+RewriteRule ^/def/vocpub/vocs                    https://github.com/AGLDWG/vocpub-profile/tree/master/vocs [R=302,L]
+RewriteRule ^/def/vocpub/repo                    https://github.com/AGLDWG/vocpub-profile [R=302,L]
