--- a/conf/linked.data.gov.au/org/tern.conf
+++ b/conf/linked.data.gov.au/org/tern.conf
@@ -681,8 +681,8 @@ RewriteRule ^/dataset/ibra7(.*)$                          https://linkeddata.ter
 
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/plot(.*)$                             https://raw.githack.com/ternaustralia/ontology_tern-plot/master/docs/tern-plot.ttl [R=303,L]
-RewriteRule ^/def/plot(.*).ttl$                         https://raw.githack.com/ternaustralia/ontology_tern-plot/master/docs/tern-plot.ttl [R=303,L]
+RewriteRule ^/def/plot(.*)$                             https://ternaustralia.github.io/ontology_tern-plot/tern-plot.ttl [R=303,L]
+RewriteRule ^/def/plot(.*).ttl$                         https://ternaustralia.github.io/ontology_tern-plot/tern-plot.ttl [R=303,L]
 RewriteRule ^/def/plot(.*)$                             https://ternaustralia.github.io/ontology_tern-plot/ [R=303,L]
 
 
