test: fix /def/lifecycle pattern using a wildcard capture pattern that collides with /def/lifecycle-stage-types

--- a/conf/linked.data.gov.au/org/agldwg.conf
+++ b/conf/linked.data.gov.au/org/agldwg.conf
@@ -77,13 +77,11 @@ RewriteRule ^/def/iso19160-1-address(.*)$                 https://raw.githack.co
 # https://linked.data.gov.au/def/lifecycle
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/lifecycle$   https://agldwg.github.io/lifecycle-model/lifecycle.ttl  [R=302,L]
 ### Temporarily comment out header setting; as is, it applies to _every_ request! Need to make it properly conditional.
 ### Header set Content-Type text/turtle
-RewriteRule ^/def/lifecycle(.*)$                 https://agldwg.github.io/lifecycle-model/lifecycle.ttl? [R=302,L]
-### Temporarily comment out header setting; as is, it applies to _every_ request! Need to make it properly conditional.
-### Header set Content-Type text/turtle
-RewriteRule ^/def/lifecycle(.*).ttl$             https://agldwg.github.io/lifecycle-model/lifecycle.ttl [R=302,L]
-RewriteRule ^/def/lifecycle(.*)$                 https://agldwg.github.io/lifecycle-model/lifecycle.html$1 [R=302,L]
+RewriteRule ^/def/lifecycle.ttl$             https://agldwg.github.io/lifecycle-model/lifecycle.ttl [R=302,L]
+RewriteRule ^/def/lifecycle$                 https://agldwg.github.io/lifecycle-model/lifecycle.html [R=302,L]
 
 
 # https://linked.data.gov.au/def/data-roles
