--- a/conf/linked.data.gov.au/org/icsm.conf
+++ b/conf/linked.data.gov.au/org/icsm.conf
@@ -732,6 +732,26 @@ RewriteRule ^/def/anzgeodcat/sdo$			https://kurrawong.github.io/anzgeodcat/profi
 RewriteRule ^/def/anzgeodcat/sdo.ttl		https://kurrawong.github.io/anzgeodcat/profile/resources/mappings/sdo.ttl [R=302,L]
 
 
+# https://linked.data.gov.au/def/csdm/profiles/common
+# https://icsm-au.github.io/3d-csdm/docs/icsm-profile/
+RewriteRule ^/def/csdm/profiles/common$ "https://icsm-au.github.io/3d-csdm/docs/icsm-profile/" [R=302,L]
+
+
+# https://linked.data.gov.au/def/csdm/profiles/nz
+# https://icsm-au.github.io/3d-csdm/docs/nz-profile/
+RewriteRule ^/def/csdm/profiles/nz$ "https://icsm-au.github.io/3d-csdm/docs/nz-profile/" [R=302,L]
+
+
+# https://linked.data.gov.au/def/csdm/profiles/vic
+# https://icsm-au.github.io/3d-csdm/docs/vic-profile/
+RewriteRule ^/def/csdm/profiles/vic$ "https://icsm-au.github.io/3d-csdm/docs/vic-profile/" [R=302,L]
+
+
+# https://linked.data.gov.au/def/csdm/profiles/wa
+# https://icsm-au.github.io/3d-csdm/docs/wa-profile/
+RewriteRule ^/def/csdm/profiles/wa$ "https://icsm-au.github.io/3d-csdm/docs/wa-profile/" [R=302,L]
+
+
 # https://linked.data.gov.au/def/building-level-types
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
