--- a/conf/linked.data.gov.au/org/tern.conf
+++ b/conf/linked.data.gov.au/org/tern.conf
@@ -670,6 +670,19 @@ RewriteRule ^/dataset/ibra7(.*)$                          https://linkeddata.ter
 # RewriteRule ^/dataset/local-gov-areas-2011(.*)$                          https://linkeddata.tern.org.au/viewers/general?uri=http://linked.data.gov.au/dataset/local-gov-areas-2011$1&sparql_endpoint=https://graphdb.tern.org.au/repositories/abs-local-gov-areas-2011 [R=302,L]
 
 
+# -------------------------------------------------------------------------
+# https://linked.data.gov.au/dataset/worldcountries2025
+
+## World countries 2025
+# Turtle
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/dataset/worldcountries2025(.*)$                          https://linkeddata.tern.org.au/viewers/administrative-areas?regiontype=https://linked.data.gov.au/dataset/worldcountries2025$1&format=text/turtle [R=302,L]
+RewriteRule ^/dataset/worldcountries2025(.*).ttl$                      https://linkeddata.tern.org.au/viewers/administrative-areas?regiontype=https://linked.data.gov.au/dataset/worldcountries2025$1&format=text/turtle [R=302,L]
+# HTML
+RewriteRule ^/dataset/worldcountries2025$                              https://linkeddata.tern.org.au/viewers/administrative-areas?regiontype=https://linked.data.gov.au/dataset/worldcountries2025 [R=302,L]
+RewriteRule ^/dataset/worldcountries2025(.*)$                          https://linkeddata.tern.org.au/viewers/administrative-areas?regiontype=https://linked.data.gov.au/dataset/worldcountries2025$1 [R=302,L]
+
 
 ############################################################################################
 ## Other redirections managed by TERN
