GSWA sample-data-quality-management

--- a/conf/linked.data.gov.au/org/gswa.conf
+++ b/conf/linked.data.gov.au/org/gswa.conf
@@ -235,6 +235,13 @@ RewriteRule ^/def/sample-curation-status($|/.*)$ "https://vocabulary.gswa.kurraw
 RewriteRule ^/def/sample-curation-status.ttl$ "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/sample-curation-status$1&_mediatype=text/turtle" [R=302,L]
 RewriteRule ^/def/sample-curation-status($|/.*) "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/sample-curation-status$1" [R=302,NE,L]
 
+# https://linked.data.gov.au/def/sample-data-quality-management
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/sample-data-quality-management($|/.*)$ "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/sample-data-quality-management$1&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/sample-data-quality-management.ttl$ "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/sample-data-quality-management$1&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/sample-data-quality-management($|/.*) "https://vocabulary.gswa.kurrawong.ai/object?uri=https://linked.data.gov.au/def/sample-data-quality-management$1" [R=302,NE,L]
+
 
 # https://linked.data.gov.au/def/sample-nomenclature-publication-status
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
