--- a/conf/linked.data.gov.au/org/dcceew.conf
+++ b/conf/linked.data.gov.au/org/dcceew.conf
@@ -50,17 +50,20 @@ RewriteRule ^/def/bdr-pr$                               https://dcceew-bdr.githu
 
 
 # https://linked.data.gov.au/def/eia-dp
-# National Species List Data Model
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/eia-dp                                https://dcceew-bdr.github.io/eia-data-profile/profile.ttl [R=302,L]
 RewriteRule ^/def/eia-dp.ttl$                           https://dcceew-bdr.github.io/eia-data-profile/profile.ttl [R=302,L]
 RewriteRule ^/def/eia-dp                                https://dcceew-bdr.github.io/eia-data-profile/spec.html [R=302,NE,L]
+RewriteRule ^/def/eia-dp/validator$                     https://dcceew-bdr.github.io/eia-data-profile/validator.ttl [R=302,L]
+RewriteRule ^/def/eia-dp/context.json$                  https://dcceew-bdr.github.io/eia-data-profile/context.json [R=302,L]
 
-# Profile Parts
-RewriteRule ^/def/eia-dp/validator$                        https://dcceew-bdr.github.io/eia-data-profile/validator.ttl [R=302,L]
-RewriteRule ^/def/eia-dp/context.json$                     https://dcceew-bdr.github.io/eia-data-profile/context.json [R=302,L]
 
+# https://linked.data.gov.au/def/eia-supermodel
+RewriteRule ^/def/eia-supermodel                        https://dcceew-bdr.github.io/eia-supermodel [R=302,NE,L]
+
+# https://linked.data.gov.au/dataset/bdr -> https://linked.bdr.gov.au/dataset/bdr
+RewriteRule ^/dataset/eiatest($|/.*?$)                  https://resources.bdr.gov.au [R=307,QSA,L]
 
 # https://linked.data.gov.au/def/nsl
 # National Species List Data Model
