further pattern fixes

--- a/conf/linked.data.gov.au/org/dcceew.conf
+++ b/conf/linked.data.gov.au/org/dcceew.conf
@@ -60,7 +60,7 @@ RewriteRule ^/def/eia-dp$                               https://dcceew-bdr.githu
 
 
 # https://linked.data.gov.au/def/eia-supermodel
-RewriteRule ^/def/eia-supermodel                        https://dcceew-bdr.github.io/eia-supermodel [R=302,NE,L]
+RewriteRule ^/def/eia-supermodel                        https://dcceew-bdr.github.io/eia-supermodel/ [R=302,NE,L]
 
 # https://linked.data.gov.au/dataset/bdr -> https://linked.bdr.gov.au/dataset/bdr
 RewriteRule ^/dataset/eiatest($|/.*?$)                  https://resources.bdr.gov.au [R=307,QSA,L]
