--- a/conf/linked.data.gov.au/org/csiro.conf
+++ b/conf/linked.data.gov.au/org/csiro.conf
@@ -144,17 +144,17 @@ RewriteRule ^/def/geox(.*)$                             https://csiro-enviro-inf
 # https://linked.data.gov.au/def/loci
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/loci                                  https://csiro-enviro-informatics.github.io/loci-ont/loci.ttl? [R=302,L]
+RewriteRule ^/def/loci($|/.+)$                          https://csiro-enviro-informatics.github.io/loci-ont/loci.ttl? [R=302,L]
 RewriteRule ^/def/loci(.*).ttl$                         https://csiro-enviro-informatics.github.io/loci-ont/loci.ttl [R=302,L]
 RewriteCond %{QUERY_STRING} ^_mediatype=application/rdf\+xml$ [OR]
 RewriteCond %{HTTP:Accept} application/rdf\+xml [NC]
-RewriteRule ^/def/loci                                  https://csiro-enviro-informatics.github.io/loci-ont/loci.rdf? [R=302,L]
+RewriteRule ^/def/loci($|/.+)$                          https://csiro-enviro-informatics.github.io/loci-ont/loci.rdf? [R=302,L]
 RewriteRule ^/def/loci(.*).rdf$                         https://csiro-enviro-informatics.github.io/loci-ont/loci.rdf [R=302,L]
 RewriteCond %{QUERY_STRING} ^_mediatype=application/ld\+json$ [OR]
 RewriteCond %{HTTP:Accept} application/ld\+json [NC]
-RewriteRule ^/def/loci                                  https://csiro-enviro-informatics.github.io/loci-ont/loci.jsonld? [R=302,L]
+RewriteRule ^/def/loci($|/.+)$                          https://csiro-enviro-informatics.github.io/loci-ont/loci.jsonld? [R=302,L]
 RewriteRule ^/def/loci(.*).jsonld$                      https://csiro-enviro-informatics.github.io/loci-ont/loci.jsonld [R=302,L]
-RewriteRule ^/def/loci(.*)$                             https://csiro-enviro-informatics.github.io/loci-ont/loci.html$1 [R=302,L]
+RewriteRule ^/def/loci($|/.+)$                          https://csiro-enviro-informatics.github.io/loci-ont/loci.html$1 [R=302,L]
 
 
 # https://linked.data.gov.au/def/project
