--- a/conf/linked.data.gov.au/org/ga.conf
+++ b/conf/linked.data.gov.au/org/ga.conf
@@ -279,14 +279,13 @@ RewriteRule /def/ga-vocpub$				https://raw.githack.com/surroundaustralia/ga-vocp
 # https://linked.data.gov.au/def/loci-dp
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/loci-dp$                              https://raw.githack.com/surroundaustralia/loci-data-profile/master/profile.ttl [R=302,L]
-RewriteRule ^/def/loci-dp.ttl$                          https://raw.githack.com/surroundaustralia/loci-data-profile/master/profile.ttl [R=302,L]
-RewriteRule ^/def/loci-dp$                              https://raw.githack.com/surroundaustralia/loci-data-profile/master/profile.html [R=302,L]
-RewriteRule ^/def/loci-dp/spec$                         https://raw.githack.com/surroundaustralia/loci-data-profile/master/specification.html [R=302,L]
-RewriteRule ^/def/loci-dp/guidance$			https://github.com/surroundaustralia/loci-data-profile/blob/master/README.md [R=302,L]
-RewriteRule ^/def/loci-dp/validator/(.*)$		https://raw.githack.com/surroundaustralia/loci-data-profile/master/validators/$1.ttl [R=302,L]
-RewriteRule ^/def/loci-dp/example/(.*)$                 https://raw.githack.com/surroundaustralia/loci-data-profile/master/examples/$1.ttl [R=302,L]
-RewriteRule ^/def/loci-dp/repo				https://github.com/surroundaustralia/loci-data-profile [R=302,L]
+RewriteRule ^/def/loci-dp$                              https://dcceew-bdr.github.io/loci-data-profile/profile.ttl [R=302,L]
+RewriteRule ^/def/loci-dp.ttl$                          https://dcceew-bdr.github.io/loci-data-profile/profile.ttl [R=302,L]
+RewriteRule ^/def/loci-dp$                              https://dcceew-bdr.github.io/loci-data-profile/specification.html [R=302,L]
+RewriteRule ^/def/loci-dp/spec$                         https://dcceew-bdr.github.io/loci-data-profile/specification.html [R=302,L]
+RewriteRule ^/def/loci-dp/validator$		            https://dcceew-bdr.github.io/loci-data-profile/validator.ttl [R=302,L]
+RewriteRule ^/def/loci-dp/example/(.*)$                 https://github.com/dcceew-bdr/loci-data-profile/tree/main/tests/data [R=302,L]
+RewriteRule ^/def/loci-dp/repo				            https://github.com/dcceew-bdr/loci-data-profile [R=302,L]
 
 
 # https://linked.data.gov.au/def/placenames
