EIA Data Kinds vocab

--- a/conf/linked.data.gov.au/org/dcceew.conf
+++ b/conf/linked.data.gov.au/org/dcceew.conf
@@ -59,6 +59,14 @@ RewriteRule ^/def/eia-dp.ttl$                           https://dcceew-bdr.githu
 RewriteRule ^/def/eia-dp$                               https://dcceew-bdr.github.io/eia-data-profile/spec.html [R=302,NE,L]
 
 
+# https://linked.data.gov.au/def/eia-dk
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/eia-dk($|/.*)$ "https://eia.testing.bdr.gov.au/object?iri=https://linked.data.gov.au/def/eia-dk&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/eia-dk(.*).ttl$ "https://eia.testing.bdr.gov.au/object?iri=https://linked.data.gov.au/def/eia-dk&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/eia-dk($|/.*)$ "https://eia.testing.bdr.gov.au/object?iri=https://linked.data.gov.au/def/eia-dk" [R=302,NE,L]
+
+
 # https://linked.data.gov.au/def/eia-supermodel
 RewriteRule ^/def/eia-supermodel                        https://dcceew-bdr.github.io/eia-supermodel/ [R=302,NE,L]
 
