--- a/conf/linked.data.gov.au/linked.conf
+++ b/conf/linked.data.gov.au/linked.conf
@@ -22,8 +22,8 @@
         RewriteRule ^/static/(.*) %{DOCUMENT_ROOT}/$1 [L]
 
         # CORS
-        Header set Access-Control-Allow-Origin "*"
-
+        Header always set Access-Control-Allow-Origin "*"
+        
         #
         # PIDs
         #
