CN & Lifecycle updates

--- a/conf/linked.data.gov.au/org/agldwg.conf
+++ b/conf/linked.data.gov.au/org/agldwg.conf
@@ -31,14 +31,12 @@ RewriteRule ^/def/datatype(.*)$                         https://raw.githack.com/
 
 
 # https://linked.data.gov.au/def/cn
-RewriteCond %{QUERY_STRING} _mediatype=text/turtle
-### Temporarily comment out header setting; as is, it applies to _every_ request! Need to make it properly conditional.
-### Header set Content-Type text/turtle
-RewriteRule ^/def/cn($|/(.*))                           https://raw.githubusercontent.com/AGLDWG/compound-naming-model/main/model.ttl [R=302,L]
-### Temporarily comment out header setting; as is, it applies to _every_ request! Need to make it properly conditional.
-### Header set Content-Type text/turtle
-RewriteRule ^/def/cn.ttl                                https://raw.githubusercontent.com/AGLDWG/compound-naming-model/main/model.ttl [R=302,L]
-RewriteRule ^/def/cn($|/(.*))                           https://agldwg.github.io/compound-naming-model/model.html [R=302,L]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/cn$         https://agldwg.github.io/compound-naming-model/model.ttl [R=302,L]
+RewriteRule ^/def/cn$         https://agldwg.github.io/compound-naming-model/model.html [R=302,L]
+RewriteRule ^/def/cn.ttl$     https://agldwg.github.io/compound-naming-model/model.ttl [R=302,L]
+RewriteRule ^/def/cn($|/.*)$  https://agldwg.github.io/compound-naming-model/model.ttl [R=302,L]
 
 
 # https://linked.data.gov.au/def/gnaf
@@ -77,11 +75,10 @@ RewriteRule ^/def/iso19160-1-address(.*)$                 https://raw.githack.co
 # https://linked.data.gov.au/def/lifecycle
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/lifecycle$   https://agldwg.github.io/lifecycle-model/lifecycle.ttl  [R=302,L]
-### Temporarily comment out header setting; as is, it applies to _every_ request! Need to make it properly conditional.
-### Header set Content-Type text/turtle
-RewriteRule ^/def/lifecycle.ttl$             https://agldwg.github.io/lifecycle-model/lifecycle.ttl [R=302,L]
-RewriteRule ^/def/lifecycle$                 https://agldwg.github.io/lifecycle-model/lifecycle.html [R=302,L]
+RewriteRule ^/def/lifecycle$         https://agldwg.github.io/lifecycle-model/lifecycle.ttl [R=302,L]
+RewriteRule ^/def/lifecycle$         https://agldwg.github.io/lifecycle-model/lifecycle.html [R=302,L]
+RewriteRule ^/def/lifecycle.ttl$     https://agldwg.github.io/lifecycle-model/lifecycle.ttl [R=302,L]
+RewriteRule ^/def/lifecycle($|/.*)$  https://agldwg.github.io/lifecycle-model/lifecycle.ttl [R=302,L]
 
 
 # https://linked.data.gov.au/def/data-roles
