--- a/conf/linked.data.gov.au/org/dcceew.conf
+++ b/conf/linked.data.gov.au/org/dcceew.conf
@@ -70,8 +70,9 @@ RewriteRule ^/def/eia-dk($|/.*)$ "https://eia.testing.bdr.gov.au/object?iri=http
 # https://linked.data.gov.au/def/eia-supermodel
 RewriteRule ^/def/eia-supermodel                        https://dcceew-bdr.github.io/eia-supermodel/ [R=302,NE,L]
 
-# https://linked.data.gov.au/dataset/bdr -> https://linked.bdr.gov.au/dataset/bdr
-RewriteRule ^/dataset/eiatest($|/.*?$)                  https://resources.bdr.gov.au [R=307,QSA,L]
+# https://linked.data.gov.au/dataset/eiatest
+RewriteRule ^/dataset/eiatest$                          https://eia.testing.bdr.gov.au [R=302,L]
+RewriteRule ^/dataset/eiatest/(.*)                      "https://eia.testing.bdr.gov.au/object?iri=https://linked.data.gov.au/dataset/eiatest/$1" [R=307,QSA,L]
 
 # https://linked.data.gov.au/def/nsl
 # National Species List Data Model
