--- a/conf/linked.data.gov.au/org/gswa.conf
+++ b/conf/linked.data.gov.au/org/gswa.conf
@@ -11,8 +11,8 @@ RewriteRule ^/def/gswa-supermodel$ https://kurrawong.github.io/gswa-supermodel/ 
 # https://linked.data.gov.au/def/geofh
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/geofh                     https://kurrawong.github.io/bore-model/model.ttl [R=302,L]
-RewriteRule ^/def/geofh.ttl$                https://kurrawong.github.io/bore-model/model.ttl [R=302,L]
+RewriteRule ^/def/geofh                     https://raw.githubusercontent.com/Kurrawong/gswa-supermodel/main/rdf/components/geofh.ttl [R=302,L]
+RewriteRule ^/def/geofh.ttl$                https://raw.githubusercontent.com/Kurrawong/gswa-supermodel/main/rdf/components/geofh.ttl [R=302,L]
 RewriteRule ^/def/geofh                     https://kurrawong.github.io/gswa-supermodel/components/geofh/ [R=302,L]
 
 
