EIA Supermodel RDF

--- a/conf/linked.data.gov.au/org/dcceew.conf
+++ b/conf/linked.data.gov.au/org/dcceew.conf
@@ -68,7 +68,11 @@ RewriteRule ^/def/eia-dk($|/.*)$ "https://eia.testing.bdr.gov.au/object?iri=http
 
 
 # https://linked.data.gov.au/def/eia-supermodel
-RewriteRule ^/def/eia-supermodel                        https://dcceew-bdr.github.io/eia-supermodel/ [R=302,NE,L]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/eia-supermodel$                       https://dcceew-bdr.github.io/eia-supermodel/profile.ttl [R=302,L]
+RewriteRule ^/def/eia-supermodel.ttl$                   https://dcceew-bdr.github.io/eia-supermodel/profile.ttl [R=302,L]
+RewriteRule ^/def/eia-supermodel                        https://dcceew-bdr.github.io/eia-supermodel/ [R=302,L]
 
 # https://linked.data.gov.au/dataset/eiatest
 RewriteRule ^/dataset/eiatest$                          https://eia.testing.bdr.gov.au [R=302,L]
